--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -60,3 +60,51 @@ bind "8" "slot8"    // Smoke
 bind "9" "slot9"    // Decoy
 
 // slot-11 is zeus
+
+
+// bind "c" "+radialradio"
+// bind "v" "+radialradio2" 
+// bind "z" "radio"
+
+// bind "MWHEELUP" "+jump"
+// bind "MWHEELDOWN" "+jump"
+// bind "CTRL" "+duck"
+
+// bind "MOUSE5" "+voicerecord"
+
+// Ctrl, Z, Capslock not binded right now
+
+bind "a" "+left"
+bind "b" "buymenu"
+bind "c" "+sprint" // walk
+bind "d" "+right"
+bind "e" "+use"
+bind "f" "+lookatweapon"
+bind "g" "drop"
+bind "j" "buy deagle; buy vest; buy vesthelm" // Eco buy
+bind "i" "show_loadout_toggle" //
+bind "k" "+voicerecord" // Mic
+bind "m" "teammenu"  // Team selection
+bind "q" "lastinv"  // Last used item
+bind "r" "+reload"
+bind "s" "+back"
+bind "t" "+spray_menu"  // Graffiti spray menu
+bind "u" "messagemode2" // Team Chat
+bind "w" "+forward"
+bind "x" "radio2; toggle spec_show_xray 0 1"
+bind "y" "messagemode" // All chat
+
+bind "SHIFT" "+duck" // crouch
+bind "F3" "autobuy"
+bind "F4" "rebuy"
+bind "F5" "jpeg" // Take screenshot
+bind "F6" "save quick"
+bind "F7" "load quick"
+bind "F10" "cs_quit_prompt" // Prompt to close the game
+
+bind "MOUSE1" "+attack" // Fire
+bind "MOUSE2" "+attack2" // Scope
+bind "MOUSE3" "player_ping"
+bind "DEL" "mute"
+
+echo (02/16) Bindings Loaded
