--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -108,3 +108,32 @@ bind "MOUSE3" "player_ping"
 bind "DEL" "mute"
 
 echo (02/16) Bindings Loaded
+
+
+//--------- 3. Crosshair
+
+exec crosshair
+cl_crosshair_friendly_warning "1"
+
+echo (03/16) Crosshair Loaded
+
+
+//--------- 4. Hud
+
+cl_color "1"    // set player colour preference to green
+cl_teammate_colors_show "2"     // show teammate colour in chat as well as letter
+cl_show_clan_in_death_notice "false"    // dont show clan tag in kill/death log (upper right)
+cl_allow_animated_avatars "false"
+cl_teamid_overhead_colors_show "true"
+cl_radar_scale "0.5"
+cl_hud_radar_scale "1.15"
+cl_hud_color "3"
+hud_scaling "1.0"
+hud_showtargetid "0"
+
+// 0 - default; 1 – white; 2 – light blue; 3 – dark blue; 4 – purple; 5 – red; 6 – orange; 7 – yellow; 8 – green; 9 – aqua; 10 – pink; 11 – dark yellow. 
+// cl_hide_avatar_images 0 // Show all avatars
+// cl_hide_avatar_images 1 // Hides avatars from everyone
+// cl_hide_avatar_images 2 // Hides avatars from everyone except friends
+
+echo (04/16) Hud Loaded
