Add Crosshair bind and radar settings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -137,3 +137,14 @@ hud_showtargetid "0"
 // cl_hide_avatar_images 2 // Hides avatars from everyone except friends
 
 echo (04/16) Hud Loaded
+
+
+//--------- 5. Radar
+cl_radar_icon_scale_min "0.7"							//Player icon scale (0.4 - 1.25 Rec: 0.6)
+cl_radar_always_centered "0"                            //Centers map instead of player
+cl_radar_scale "0.5"                                    //Radar map scale size, 0.4 works on all maps
+cl_teammate_colors_show "1"                             //Show teammates as separate colors without letter
+cl_hud_radar_scale "1.2"                                //Radar size, not too big and not too small
+cl_radar_square_with_scoreboard 0
+
+echo (05/16) Radar Loaded
