--- a/crosshair.cfg
+++ b/crosshair.cfg
@@ -11,3 +11,7 @@ cl_crosshaircolor_b 0
 cl_crosshaircolor_g 0
 cl_crosshaircolor_r 0
 cl_crosshair_drawoutline 1
+
+
+// Single Key Bind Example
+// bind "8" "cl_crosshairalpha 255; cl_crosshairstyle 4;cl_crosshaircolor 4;cl_crosshair_outlinethickness 1; cl_crosshair_drawoutline 1; cl_crosshairthickness 1.5; cl_crosshairgap -5; cl_crosshairdot 1; cl_crosshairsize 0;cl_crosshaircolor_b 255; cl_crosshaircolor_g 255; cl_crosshaircolor_r 255"
