Add mouse settings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -148,3 +148,18 @@ cl_hud_radar_scale "1.2"                                //Radar size, not too bi
 cl_radar_square_with_scoreboard 0
 
 echo (05/16) Radar Loaded
+
+
+//---------- 6. Mouse
+sensitivity "1.500000"
+cl_sniper_delay_unscope "false"
+cl_sniper_auto_rezoom "true"
+zoom_sensitivity_ratio "0.818933027098955175"
+
+// m_rawinput "1"															//Enable Raw Input for perfect precision (Raw input is unavailable on OSX)
+// m_mouseaccel2 "0"														//Disables windows mouse acceleration initial threshold, safety precaution
+// m_mouseaccel1 "0"														//Disables windows mouse acceleration initial threshold, safety precaution
+// m_customaccel "0"														//Custom mouse acceleration disabled
+// m_mousespeed "1"	
+
+echo (06/16) Mouse Loaded
