Add view model settings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -163,3 +163,18 @@ zoom_sensitivity_ratio "0.818933027098955175"
 // m_mousespeed "1"	
 
 echo (06/16) Mouse Loaded
+
+
+//----------- 7. Viewmodel (Forced + Personal preference)
+
+viewmodel_offset_x "2.5"												//Changes viewmodel view in X scale
+viewmodel_offset_y "0"												//Changes viewmodel view in Y scale
+viewmodel_offset_z "-1.5"												//Changes viewmodel view in Z scale
+viewmodel_fov "68"														//Highest viewmodel FOV
+viewmodel_recoil "0"													//Disable viewmodel reactions to weapon recoil & aimpunch (from Update: 2018-03-01)
+viewmodel_presetpos "3"                                               //This command will set your X/Y/Z viewmodel offsets to a preset configuration  
+cl_righthand "1"                                                          //uses right hand in view model
+
+// bind "7" "toggle viewmodel_presetpos 3 1"
+
+echo (07/16) Viewmodel Loaded
