--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -178,3 +178,16 @@ cl_righthand "1"                                                          //uses
 // bind "7" "toggle viewmodel_presetpos 3 1"
 
 echo (07/16) Viewmodel Loaded
+
+
+//------------ 8. Bob (Viewmodel movement)
+// cl_bob_lower_amt "5"													//How much the viewmodel lowers when running, set to lowest for less distraction
+// cl_bobamt_lat "0.1"														//How much the viewmodel moves side to side when running, set to lowest for less distraction
+// cl_bobamt_vert "0.1"													//How much the viewmodel moves up and down when running, set to lowest for less distraction
+// cl_bobcycle "0.98"														//The frequency at which the viewmodel bobs, set to default
+// cl_viewmodel_shift_left_amt "0.5"										//Lowers the crouching animation of the viewmodel
+// cl_viewmodel_shift_right_amt "0.25"										//Lowers the crouching animation of the viewmodel
+
+echo (08/16) Bob Loaded
+
+
