Add Network and Netgraph commands

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -191,3 +191,13 @@ echo (07/16) Viewmodel Loaded
 echo (08/16) Bob Loaded
 
 
+//------------- 9. Network (settings are optimized for fastest connection)
+rate "786432"											//Your download rate to the server (Max rate: 786432 Default: 196608)
+mm_dedicated_search_maxping "80"                        //Maxping Search in Matchmaking
+
+echo (09/16) Network Loaded
+
+//-------------- 10. Netgraph
+cq_netgraph "0"											//Netgraph (Default: 0)
+
+echo (10/16) Netgraph Loaded
