Add sound settings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -201,3 +201,37 @@ echo (09/16) Network Loaded
 cq_netgraph "0"											//Netgraph (Default: 0)
 
 echo (10/16) Netgraph Loaded
+
+
+//-------------- 11. Video
+r_fullscreen_gamma "2.1"
+
+echo (11/16) Video Loaded
+
+
+//-------------- 12. Sound
+volume "1"
+voice_always_sample_mic "true"  // voip not picking up mic without this
+snd_voipvolume "0.7"   // other players' mic volume
+snd_mute_losefocus "false"  // continue playing in-game sounds when alt-tabbed/minimized
+snd_mute_mvp_music_live_players "true" // mute mvp music if players from both teams are still alive
+snd_deathcamera_volume "0"
+snd_mapobjective_volume "0"
+snd_menumusic_volume "0"
+snd_roundstart_volume "0"
+snd_roundaction_volume "0"
+snd_roundend_volume "0"
+snd_tensecondwarning_volume "0.3"
+
+snd_ducktovolume 0.55
+snd_gamevoicevolume 1
+snd_gamevolume 1
+snd_musicvolume 1
+snd_mvp_volume 0
+
+snd_steamaudio_reverb_level_db -3
+snd_steamaudio_enable_perspective_correction 0
+snd_spatialize_lerp 1
+snd_headphone_eq 0
+
+echo (12/16) Sound Loaded
