Quality of life and scripts

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -235,3 +235,57 @@ snd_spatialize_lerp 1
 snd_headphone_eq 0
 
 echo (12/16) Sound Loaded
+
+//--------------- 13. Other
+
+r_drawtracers_firstperson "0"							//Hide first person tracers, does not hide other players tracers (Default: 1)
+cl_join_advertise "2"									//Allow friends to join your community servers via friends list (Rec: 2 Default: 0)
+
+echo (13/16) Other Loaded
+
+//---------------- 14. Chat
+
+
+echo (14/16) Chat
+
+
+//---------------- 15. Scripts
+
+cl_use_opens_buy_menu 1 // Use "use" key for buy menu
+
+// Crouch jump
+
+alias +duckjump "+jump; +duck"
+alias -duckjump "-jump; -duck"
+bind "alt" "+duckjump"
+
+// Drop bomb
+bind b "use weapon_knife; use weapon_c4; drop; slot1"
+
+// Jump Throw
+alias "+jumpaction" "+jump;"
+alias "+throwaction" "-attack; -attack2"
+alias "-jumpaction" "-jump"
+bind "v" "+jumpaction;+throwaction;"
+
+// Qualify of life shortcuts for console commands
+alias "d" "disconnect"
+alias "q" "quit"
+alias "r" "retry"
+alias "rs" "mp_restartgame 1"
+alias "nt" "net_connections_stats"
+alias "ns" "net_status"
+alias "st" "status"
+// alias "script" "exec script"
+
+
+echo (15/16) Scripts Loaded
+
+
+//---------------- Final part
+
+host_writeconfig //Useful for forcing viewmodel settings
+
+echo (16/16) Config Applied
+
+playvol "ui\mm_success_lets_roll" "0.5" // Plays "Let's Roll" soundbite when the config is loaded
