Add some game commands

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -252,6 +252,14 @@ echo (14/16) Chat
 //---------------- 15. Scripts
 
 cl_use_opens_buy_menu 1 // Use "use" key for buy menu
+safezonex "0.9"
+safezoney "1.0"
+cl_teamcounter_playercount_instead_of_avatars 0
+engine_low_latency_sleep_after_client_tick
+cl_crosshair_recoil false
+cl_debounce_zoom 0
+cl_crosshairgap_useweaponvalue 0 
+cl_obs_interp_enable 0
 
 // Crouch jump
 
