--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -17,6 +17,10 @@
 echo (00/16) Config Loaded                              //This confirms that the config has been loaded
 
 // Start options
+// Remainder to add sv_cheats, buy binds, fps boost, radio menus, arrows to spectate in casual
+
+// +fps_max 0 -nojoy -softparticlesdefaultoff +violence_hblood 0 +r_drawparticles 0 -console
+// +engine_low_latency_sleep_after_client_tick true +fps_max 0 -nojoy -high -fullscreen +mat_disable_fancy_blending 1 -forcenovsync +r_dynamic 0 +mat_queue_mode 2 -softparticlesdefaultoff -vulkan
 
 // -usePriorityBoost -favor_consistent_framerate -threads 7 -high
 // +exec autoexec +fps_max 0 -nojoy -softparticlesdefaultoff +violence_hblood 0 +r_drawparticles 0 -console +engine_low_latency_sleep_after_client_tick true +fps_max 0 -nojoy -high -fullscreen +mat_disable_fancy_blending 1 -forcenovsync +r_dynamic 0 +mat_queue_mode 2
@@ -95,6 +99,7 @@ bind "x" "radio2; toggle spec_show_xray 0 1"
 bind "y" "messagemode" // All chat
 
 bind "SHIFT" "+duck" // crouch
+bind "capslock" "radio2"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
 bind "F5" "jpeg" // Take screenshot
@@ -286,6 +291,34 @@ alias "ns" "net_status"
 alias "st" "status"
 // alias "script" "exec script"
 
+
+// Buy Binds
+
+bind "leftarrow" "buy flashbang;"
+bind "downarrow" "buy molotov; buy incgrenade;"
+bind "rightarrow" "buy smokegrenade;"
+bind "uparrow" "buy hegrenade;"
+
+bind KP_0 "buy vesthelm; buy vest"
+bind KP_1 "buy m4a1; buy ak47; buy equipment-armor;"
+bind KP_2 "buy Galil; buy Famas" 
+bind KP_3 "buy awp; buy equipment-armor;"
+// bind KP_4 "buy mp5sd"
+// bind KP_5 "buy P90"
+// bind KP_6 "buy aug; buy sg556"
+// bind KP_7 "buy hegrenade" 
+// bind KP_8 "buy flashbang"
+// bind KP_9 "buy smokegrenade"
+// bind KP_DIVIDE "buy P250" 
+// bind KP_MULTIPLY "buy fn57"
+// bind KP_MINUS "buy deagle"
+// bind KP_PLUS "buy molotov; buy incgrenade"
+//bind KP_ENTER
+bind kp_DEL "buy defuser"
+
+// Spectate Keys
+// bind "LEFTARROW" "+turnleft"
+// bind "RIGHTARROW" "+turnright"
 
 echo (15/16) Scripts Loaded
 
