--- a/crosshair.cfg
+++ b/crosshair.cfg
@@ -13,5 +13,6 @@ cl_crosshaircolor_r 0
 cl_crosshair_drawoutline 1
 
 
+bind "8" "cl_crosshairstyle 4;cl_crosshairalpha 200;cl_crosshaircolor 1;cl_crosshair_drawoutline 1;cl_crosshair_outlinethickness 1;cl_crosshairthickness 1;cl_crosshairgap -2;cl_crosshairdot 0;cl_crosshairsize 3;cl_crosshaircolor_b 50; cl_crosshaircolor_g 250; cl_crosshaircolor_r 50;cl_crosshairusealpha 1;cl_crosshair_t 0;cl_crosshairgap_useweaponvalue 0;hud_showtargetid 1"
+
 // Single Key Bind Example
-// bind "8" "cl_crosshairalpha 255; cl_crosshairstyle 4;cl_crosshaircolor 4;cl_crosshair_outlinethickness 1; cl_crosshair_drawoutline 1; cl_crosshairthickness 1.5; cl_crosshairgap -5; cl_crosshairdot 1; cl_crosshairsize 0;cl_crosshaircolor_b 255; cl_crosshaircolor_g 255; cl_crosshaircolor_r 255"
