--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -112,6 +112,10 @@ bind "MOUSE2" "+attack2" // Scope
 bind "MOUSE3" "player_ping"
 bind "DEL" "mute"
 
+bind "b" "buymenu"
+bind "e" "+use"
+cl_use_opens_buy_menu "1"
+
 echo (02/16) Bindings Loaded
 
 
