--- a/crosshair.cfg
+++ b/crosshair.cfg
@@ -12,7 +12,8 @@ cl_crosshaircolor_g 0
 cl_crosshaircolor_r 0
 cl_crosshair_drawoutline 1
 
-
+bind "9" "cl_crosshairalpha 255;cl_crosshairgap -5;cl_crosshair_outlinethickness 1;cl_crosshaircolor 4;cl_crosshairthickness 1.5;cl_crosshairstyle 4;cl_crosshairsize 0;cl_crosshairdot 1;cl_crosshaircolor_b 0;cl_crosshaircolor_g 0;cl_crosshaircolor_r 0;cl_crosshair_drawoutline 1"
+bind "6" "cl_crosshairgap -3;cl_crosshair_outlinethickness 1;cl_crosshaircolor_r 255;cl_crosshaircolor_g 255;cl_crosshaircolor_b 0;cl_crosshairalpha 255;cl_crosshair_dynamic_splitdist 7;cl_crosshair_recoil false;cl_fixedcrosshairgap -5;cl_crosshaircolor 2;cl_crosshair_drawoutline false;cl_crosshair_dynamic_splitalpha_innermod 1;cl_crosshair_dynamic_splitalpha_outermod 0.5;cl_crosshair_dynamic_maxdist_splitratio 0.3;cl_crosshairthickness 1;cl_crosshairdot false;cl_crosshairgap_useweaponvalue false;cl_crosshairusealpha true;cl_crosshair_t false;cl_crosshairstyle 4;cl_crosshairsize 1.5"
 bind "8" "cl_crosshairstyle 4;cl_crosshairalpha 200;cl_crosshaircolor 1;cl_crosshair_drawoutline 1;cl_crosshair_outlinethickness 1;cl_crosshairthickness 1;cl_crosshairgap -2;cl_crosshairdot 0;cl_crosshairsize 3;cl_crosshaircolor_b 50; cl_crosshaircolor_g 250; cl_crosshaircolor_r 50;cl_crosshairusealpha 1;cl_crosshair_t 0;cl_crosshairgap_useweaponvalue 0;hud_showtargetid 1"
 
 // Single Key Bind Example
