--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -18,7 +18,7 @@ echo (00/16) Config Loaded                              //This confirms that the
 
 // Start options
 // Remainder to add sv_cheats, buy binds, fps boost, radio menus, arrows to spectate in casual
-
+// +exec autoexec -nod3d9ex -noaafonts +mat_queue_mode 2 -nojoy -softparticlesdefaultoff +violence_hblood 0 +r_drawparticles 0 -console +engine_low_latency_sleep_after_client_tick true -high +mat_disable_fancy_blending 1 -forcenovsync +r_dynamic 0
 // +fps_max 0 -nojoy -softparticlesdefaultoff +violence_hblood 0 +r_drawparticles 0 -console
 // +engine_low_latency_sleep_after_client_tick true +fps_max 0 -nojoy -high -fullscreen +mat_disable_fancy_blending 1 -forcenovsync +r_dynamic 0 +mat_queue_mode 2 -softparticlesdefaultoff -vulkan
 
