--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,6 +15,14 @@
 // 14. Scripts
  
 echo (00/16) Config Loaded                              //This confirms that the config has been loaded
+alias "brosena-dm" "connect 13.203.255.62:37015"
+alias "brosena-r1" "connect 35.154.230.209:27015"
+alias "brosena-r2" "connect 35.154.230.209:47015"
+alias "brosena-r3" "connect 13.203.255.62:27015"
+alias "brosena-r4" "connect 13.203.255.62:47015"
+alias "novitaz" "connect 13.233.62.210:27015"
+alias "rev" "connect 148.113.17.20:27015"
+alias "schatten" "connect 148.113.1.122:26319"
 
 // Start options
 // Remainder to add sv_cheats, buy binds, fps boost, radio menus, arrows to spectate in casual
@@ -230,13 +238,13 @@ snd_menumusic_volume "0"
 snd_roundstart_volume "0"
 snd_roundaction_volume "0"
 snd_roundend_volume "0"
-snd_tensecondwarning_volume "0.9"
+snd_tensecondwarning_volume "0.5"
 
 snd_ducktovolume 0.55
 snd_gamevoicevolume 1
 snd_gamevolume 1
-snd_musicvolume 1
-snd_mvp_volume 1
+snd_musicvolume 0.4
+snd_mvp_volume 0.5
 
 snd_steamaudio_reverb_level_db -3
 snd_steamaudio_enable_perspective_correction 0
